# himalia

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  compose.beta.yaml  compose.yaml
.github/workflows/: ci.yml  publish-beta-image.yml  publish-dev-image.yml  publish-release-image.yml
app/: alembic.ini  constraints.txt  poller.py  pyproject.toml  requirements.txt  wsgi.py
app/alembic/: env.py
app/alembic/versions/: 2b9e8f0a9f1a_init_schema.py
app/himalia_api/: __init__.py  config.py  db.py  migrate.py  models.py  openapi.py  serializers.py  validation.py
app/himalia_api/routes/: devices.py
docker/: Dockerfile
docker/rootfs/etc/cont-finish.d/: 90-openplc-save
docker/rootfs/etc/cont-init.d/: 10-prepare-data-dirs  15-db-migrate  20-openplc-restore  25-openplc-setup
docker/rootfs/etc/services.d/api/: run
docker/rootfs/etc/services.d/cron/: run
docker/rootfs/etc/services.d/nodered/: run
docker/rootfs/etc/services.d/openplc/: run
docs/: dockerfile-pinning.md  github-governance.md  s6-overlay.md
nodered/seed/: flows.json
openplc/scripts/: openplc-restore.sh  openplc-save.sh
tests/: conftest.py
tests/integration/: run.sh
tests/unit/: test_devices.py  test_health.py
