[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "himalia"
version = "0.0.1"
description = "Himalia core API"
requires-python = ">=3.11"
dependencies = [
  "Flask",
  "Flask-CORS",
  "requests",
  "SQLAlchemy",
  "pandas",
  "numpy",
  "openpyxl",
  "APScheduler",
  "python-dotenv",
  "PyYAML",
  "pyvisa-py",
  "gunicorn",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

